Design of the movies page UI % exercise 3 attemp

--- a/w5-lab-storage/src/app/home/home.page.html
+++ b/w5-lab-storage/src/app/home/home.page.html
@@ -21,6 +21,10 @@
   <ion-button expand="full" (click)="getAllKeys()">Get all keys</ion-button>
   <ion-button expand="full" (click)="getStorageLength()">Get Storage</ion-button>
   <ion-button expand="full" (click)="forEachItem()">For each</ion-button>
+  <!-- src/app/home/home.page.html -->
+
 
   <p>{{ output }}</p>
 </ion-content>
+
+<ion-button expand="full" routerLink="/movies">Go to Movies</ion-button>
